Updated Spacing and Margin Issues. Changed The Projects section to be 2 Columns instead of 3

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -66,10 +66,12 @@ textarea {
 
 html,
 body {
-    height: 100%;
+	height: 100%;
+	width: 100%;
 }
 
 body {
+	overflow-x: hidden;
     font-family: "Lato" sans-serif;
     font-weight: 400;
     font-size: 16px;
@@ -456,7 +458,7 @@ h1, h2, h3, h4, h5, h6 {
   display: block;
   position: relative;
   overflow: hidden;
-  background-color: #2f2f2f;
+  /* background-color: #2f2f2f; */
   -webkit-transition: background-color 0.4s;
   -moz-transition: background-color 0.4s;
   -o-transition: background-color 0.4s;
@@ -476,6 +478,7 @@ h1, h2, h3, h4, h5, h6 {
 
 .img-responsive {
 	margin: auto;
+	width: -webkit-fill-available;
 }
 
 .project:hover .photo-wrapper {
